feat: cadastrando vendas de produtos com ingressos