@@ -1,14 +1,13 @@
 package poltrona.mapper;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import poltrona.dto.venda.ItemVendaResponseDTO;
 import poltrona.dto.venda.VendaRequestDTO;
 import poltrona.dto.venda.VendaResponseDTO;
-import poltrona.entity.Cliente;
+import poltrona.entity.Usuario;
 import poltrona.entity.Venda;
+import java.util.List;
+import java.util.UUID;
 
 @Component
 public class VendaMapper {
@@ -19,16 +18,22 @@ public class VendaMapper {
         this.itemVendaMapper = itemVendaMapper;
     }
 
-    public Venda toEntity(Cliente cliente, VendaRequestDTO dto) {
+    public Venda toEntity(VendaRequestDTO dto, Usuario cliente) {
+        if (dto == null) {
+            return null;
+        }
 
         return new Venda(cliente, dto.formaPagamento());
-
     }
 
     public VendaResponseDTO toDTO(Venda venda) {
+        if (venda == null) {
+            return null;
+        }
 
-        List<ItemVendaResponseDTO> itensDaVenda = venda.getItens().stream().map(itemVendaMapper::toDTO)
-                .collect(Collectors.toList());
+        List<ItemVendaResponseDTO> itensDTO = venda.getItens().stream()
+                .map(itemVendaMapper::toDTO)
+                .toList();
 
         return new VendaResponseDTO(
                 venda.getId(),
@@ -37,8 +42,6 @@ public class VendaMapper {
                 venda.getValorTotal(),
                 venda.getStatus(),
                 venda.getFormaPagamento(),
-                itensDaVenda);
-
+                itensDTO);
     }
-
 }
